# caramba

./: .air.toml  .blackboxrules  .dockerignore  .env  .env-example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  EXAMPLE.py  LICENSE  LICENSE.md  MCPSpec.txt  Makefile  NOTES.md  README.md  REVIEW.md  TECHSpec.txt  TENSOR_BACKEND_REWRITE.md  TODO.md  VERIFICATION_STATUS.md  WARP.md  __main__.py  __main___test.py  accuracy_log.txt  avx2_386_from_amd64.s  caramba.py  caramba_api.py  cli.py  cli_test.py  command.py  config.yml  conftest.py  coverage.xml  debug_a2a.py  docker-compose.yml  falkordb-config.yml  followup.md  go.mod  (+42 more)
.curious/: erf_t.go  gelu_avx_sim.go  gelu_dbg.go  gelu_f64_soft.go  gelu_hybrid.go  gelu_metal_sim.go  gelu_neon_parity.go  gelu_one.go  gelu_scalar_parity.go  gelu_ulp_check.go  sf64_exp_main.go  sf64_gelu_full.go  sf64_gelu_main.go  sf64_link.go  sf64_math.go  sf64_runtime.go  state.json
.githooks/: post-commit  pre-push
.sonarlint/: connectedMode.json
TODO/: agent-self-improvement.md  memory-system-optimizations.md  workflow-enhancements - part2.md  workflow-enhancements.md
adapter/: __init__.py  base.py  model.py
agent/: __init__.py  config.go  context.go  context.py  context_test.py  executor.go  generator.go  knowledge.py  message.py  persona.py  persona_test.py  process_runner.py  prompt.py  researcher_test.py  status.go  team.go
ai/: __init__.py  a2a_server.py  agent.go  agent.py  analysis_process.go  async_dispatch_test.py  buffer.go  connection.py  context.go  context_test.go  entrypoint.py  executor.py  identity.go  identity_test.go  interfaces.go  interpreter.go  interpreter_test.go  lead.py  mcp.py  orchestrator.go  persona.py  persona_test.py  pipeline.go  pool.go  process.go  prompt.go  push_notifications.py  retry.py  root.py  server.py  session_store.py  system.go  system_test.go  task_store.py  team.py  tool.go  types.py  worker.py
api/: __init__.py  app.py
artifacts/: multiplex_chat.json  multiplex_chat.jsonl
benchmark/: __init__.py  accuracy.py  artifacts.py  artifacts_test.py  attention_multi_model.py  behavior.py  behavior_instruct.py  behavioral_v2.py  behavioral_v2_choice_test.py  context.py  evaluators.py  evaluators_test.py  generation.py  isolated_multi_model_run.py  latency.py  latency_test.py  memory.py  memory_test.py  metrics.py  metrics_test.py  multi_model_artifacts.py  multi_model_results.py  multi_model_runner.py  perplexity.py  perplexity_microscope.py  perplexity_test.py  runner.py  runner_fairness_test.py  runner_test.py  stats.py  stats_test.py  utils.py  utils_test.py
cache/: __init__.py  decoupled.py  decoupled_test.py  layer.py  layer_test.py  multi.py  multi_test.py  tensor.py  tensor_test.py
carmath/: __init__.py  batching.py  bytes.py  carmath_test.py  grouping.py  linalg.py  optim.py  precision.py  scan.py  scan_test.py  sketch.py  splits.py
ccl/: __init__.py  context_counts.py  patch_vq.py  system.py
cli/: tui.py
cmd/: agent.go  chat.go  chat_test.go  container.go  editor.go  example.go  image.go  logger.go  mcp.go  progress.go  progress_test.go  research.go  root.go  serve.go  state.go  test.go  tui.go
codegraph/: __init__.py  parser.py  sync.py
collector/: __init__.py
comms/: message.go
compiler/: __init__.py  lower.py  lower_graph_test.py  lower_manifest_test.py  lower_test.py  plan.py  plan_test.py  validate.py
config/: __init__.py  agents.py  benchmark.py  benchmark_test.py  checkpointer.py  collector.py  component.py  compute.py  compute_test.py  conftest.py  defaults.py  diffusion.py  embedder.py  eval.py  group.py  initializer.py  instrumentation.py  kvcache.py  layer.py  manifest.py  manifest_template_test.py  manifest_test.py  mcp_registry.py  mcp_servers.yml  model.py  model_optimize_test.py  orchestrator.py  persona.py  persona_test.py  platform_improve.py  resolve.py  resolve_test.py  run.py  stepper.py  target.py  teams.py  topology.py  topology_graph.py  train.py  transforms.py  (+4 more)
console/: __init__.py  logger.py  logger_test.py
core/: __init__.py  commitments.py  commitments_test.py  error.py  event.py  event_bus.py  event_codec.py  homeostasis.py  platform.py  task_queue.py
daemon/: containerd.go  hyperkit.go  init.go
data/: __init__.py  auto.py  auto_test.py  base.py  code_chunks.py  code_chunks_test.py  config.py  diffusion_vector.py  error.py  event_trace.py  event_trace_test.py  graph_npy.py  hf_image_classification.py  icl_rule.py  icl_rule_test.py  mosaic_synth.py  npy.py  npy_supervised.py  npy_test.py  random_tokens.py  tensors.py  tensors_test.py  text_tokens.py  token_dataset.py  tokens.py  tokens_test.py  transforms.py
datalake/: conn.go
datura/: artifact.capnp  artifact.capnp.go  artifact.go  artifact_test.go  circuit.go  circuit_test.go  conversion.go  crypto.go  enum.go  io.go
diffusion/: __init__.py  samplers.py  samplers_test.py  schedule.py
docker/: Dockerfile.deeplake-mcp  Dockerfile.dev-agent  Dockerfile.paper-tool  Dockerfile.persona-a2a  OPTIMIZATION.md
docs/: a2a_and_mcp.md  a2a_architecture.md  agent.md  agents-ingress.md  agents.md  architecture.md  backend-compliance-audit.md  backend-coverage.md  backend-inventory.md  benchmarking.md  capnproto.md  compute.md  context.md  contributing.md  core-concepts.md  cpu-alternative-paradigm-avx512.md  cpu-dispatch-matrix.md  device-backend-matrix.md  examples.md  feedback.md  frontend.md  getting-started.md  inference.md  layers.md  manifest-model.md  manifest.md  manifests.md  math_subselection_developed_demo.html  mcp.md  metal-backend-gpu-plan.md  notary-ledger.md  notary.md  operations.md  optimization.md  pipeline.md  providers.md  research-platform-requirements.md  tools.md  topologies.md  training.md  (+1 more)
environment/: executor.go  pool.go
errnie/: logger.go
eval/: nuanced.py  suite.py  tokenizer.py  tokenizer_test.py
evaluator/: __init__.py  evaluator_test.py  policy.py  regression.py  score.py  validity.py
examples/: README.md  analysis.go  architecture.go  browser_agent.go  browser_interact.go  capnp.go  chat.go  code.go  coding_agent.go  dev.go  (+10 more)
(+5238 files in other folders)
