[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caramba"
version = "0.1.0"
description = "A research platform for efficient AI with Decoupled Bottleneck Attention"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "The Ape Machine"}
]
keywords = ["ai", "machine-learning", "attention", "transformers", "kv-cache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "numpy",
    "tiktoken",
    "datasets",
    "tqdm",
    "matplotlib",
    "tensorboard",
    "rich",
    "h5py",
    "wandb",
    "pydantic",
    "PyYAML",
    "huggingface_hub",
    "safetensors",
    "tensordict",
    "google-adk[a2a]",
    "google-generativeai",
    "langchain-google-genai",
    "langchain-mcp-adapters",
    "langgraph",
    "litellm",
    "a2a-sdk",
    "colbert-ai",
    "deeplake",
    "docling",
    "transformers",
    "graphiti-core",
    "falkordb",
    "crawl4ai",
    "mcp[cli]",
    "pytest",
    "pytest-asyncio",
    "click",
    "fastapi",
    "uvicorn[standard]",
    "fastmcp",
    "pydantic-yaml",
    "jsonschema-pydantic",
    "textual",
    "textual-plotext",
    "httpx",
    "docker",
    "openhands-sdk",
    "openhands-tools",
    "nest-asyncio",
    "networkx",
    "asyncpg",
    "pycapnp",
    "pytorch-lightning",
    "vastai-sdk",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
caramba = "caramba.__main__:main"

[tool.setuptools]
packages = [
    "caramba",
    "caramba.tui",
    "caramba.api",
    "caramba.ai",
    "caramba.benchmark",
    "caramba.cache",
    "caramba.ccl",
    "caramba.codegraph",
    "caramba.compiler",
    "caramba.config",
    "caramba.console",
    "caramba.data",
    "caramba.diffusion",
    "caramba.eval",
    "caramba.experiment",
    "caramba.infer",
    "caramba.instrumentation",
    "caramba.initializers",
    "caramba.initializers.dba",
    "caramba.layer",
    "caramba.loader",
    "caramba.adapter",
    "caramba.adapter.schema",
    "caramba.adapter.state_dict",
    "caramba.model",
    "caramba.carmath",
    "caramba.optimizer",
    "caramba.optimizer.metal",
    "caramba.orchestrator",
    "caramba.runtime",
    "caramba.topology",
    "caramba.trainer",
    "caramba.trainer.diffusion_codegen",
    "caramba.lab",
    "caramba.lab.resonant",
    "resonant",
    "resonant.core",
    "resonant.core.associative_memory",
]

[tool.setuptools.package-dir]
caramba = "."

[tool.setuptools.package-data]
caramba = [
    "config/presets/*.yml",
    "config/benchmarks/*.yml",
    "optimizer/metal/*.metal",
    "optimizer/metal/*.mm",
]

[tool.pyright]
include = ["."]
exclude = [".venv", "**/__pycache__", "*.egg-info"]
# The `caramba` package in this repo is the *repository directory* itself, so
# type checkers need the parent directory on the import path to resolve
# `import caramba.*` correctly.
extraPaths = [".."]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"

[tool.coverage.run]
# Torch / dynamo / compile can create ephemeral Python modules in temp dirs that
# disappear before reporting. Those should not fail coverage reporting.
omit = [
    "/private/var/folders/*",
    "/var/folders/*",
    "/tmp/*",
    "*/site-packages/*",
]

[tool.coverage.report]
ignore_errors = true
show_missing = true
skip_covered = false
