[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caramba"
version = "0.1.0"
description = "A research platform for efficient AI with Decoupled Bottleneck Attention"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "The Ape Machine"}
]
keywords = ["ai", "machine-learning", "attention", "transformers", "kv-cache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Runtime deps are intentionally constrained (not fully pinned).
    # Reproducible installs are provided by `uv.lock` (see `make install` / `uv sync`).
    "torch>=2.0",
    "mlx",
    "mlx-lm",
    "lm-eval",
    "numpy>=1.24",
    "tiktoken>=0.5",
    "datasets>=2.0",
    "tqdm>=4.64",
    "matplotlib>=3.7",
    "tensorboard>=2.13",
    "rich>=13.0",
    "h5py>=3.9",
    "wandb>=0.15",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "huggingface_hub>=0.20",
    "safetensors>=0.4",
    "tensordict>=0.3",
    "google-adk[a2a]",
    "google-generativeai>=0.4",
    "langchain-google-genai>=1.0",
    "langchain-mcp-adapters>=0.0.4",
    "langgraph>=0.2",
    "litellm>=1.0",
    "a2a-sdk>=0.1",
    "colbert-ai>=0.2",
    "deeplake>=4.0",
    "docling>=2.0",
    "transformers>=4.0",
    "graphiti-core>=0.3",
    "falkordb>=1.0",
    "crawl4ai>=0.4",
    "mcp[cli]",
    "click>=8.1",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "fastmcp>=0.1",
    "pydantic-yaml>=1.0",
    "jsonschema-pydantic>=0.6",
    "textual>=0.60",
    "textual-plotext>=0.2",
    "httpx>=0.25",
    "docker>=7.0",
    "openhands-sdk>=0.1",
    "openhands-tools>=0.1",
    "nest-asyncio>=1.5",
    "networkx>=3.0",
    "asyncpg>=0.29",
    "pycapnp>=2.0",
    "pytorch-lightning>=2.0",
    "vastai-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
caramba = "caramba.__main__:main"

[tool.setuptools]
packages = [
    "caramba",
    "caramba.tui",
    "caramba.api",
    "caramba.ai",
    "caramba.benchmark",
    "caramba.cache",
    "caramba.ccl",
    "caramba.codegraph",
    "caramba.compiler",
    "caramba.config",
    "caramba.console",
    "caramba.data",
    "caramba.diffusion",
    "caramba.eval",
    "caramba.experiment",
    "caramba.infer",
    "caramba.instrumentation",
    "caramba.initializers",
    "caramba.initializers.dba",
    "caramba.layer",
    "caramba.loader",
    "caramba.adapter",
    "caramba.adapter.schema",
    "caramba.adapter.state_dict",
    "caramba.model",
    "caramba.carmath",
    "caramba.optimizer",
    "caramba.optimizer.metal",
    "caramba.orchestrator",
    "caramba.runtime",
    "caramba.topology",
    "caramba.trainer",
    "caramba.trainer.diffusion_codegen",
    "caramba.lab",
    "caramba.lab.resonant",
    "resonant",
    "resonant.core",
    "resonant.core.associative_memory",
    "collector",
    "collector.measurement",
    "collector.measurement.accuracy",
    "collector.measurement.context",
]

[tool.setuptools.package-dir]
caramba = "."

[tool.setuptools.package-data]
caramba = [
    "config/presets/*.yml",
    "config/benchmarks/*.yml",
    "research/**/manifests/*.yml",
    "optimizer/metal/*.metal",
    "optimizer/metal/*.mm",
]

[tool.pyright]
include = ["."]
exclude = [".venv", "**/__pycache__", "*.egg-info"]
# The project root (caramba/) is the import root. Top-level packages like
# `collector` and `caramba` are resolved relative to here.
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"

[tool.coverage.run]
# Torch / dynamo / compile can create ephemeral Python modules in temp dirs that
# disappear before reporting. Those should not fail coverage reporting.
omit = [
    "/private/var/folders/*",
    "/var/folders/*",
    "/tmp/*",
    "*/site-packages/*",
]

[tool.coverage.report]
ignore_errors = true
show_missing = true
skip_covered = false
