[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caramba"
version = "0.1.0"
description = "A research platform for efficient AI with Decoupled Bottleneck Attention"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "The Ape Machine"}
]
keywords = ["ai", "machine-learning", "attention", "transformers", "kv-cache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Runtime deps are intentionally constrained (not fully pinned).
    # Reproducible installs are provided by `uv.lock` (see `make install` / `uv sync`).
    "torch",
    "mlx",
    "mlx-lm",
    "lm-eval",
    "numpy",
    "tiktoken",
    "datasets",
    "tqdm",
    "matplotlib",
    "tensorboard",
    "rich",
    "h5py",
    "wandb",
    "pydantic",
    "PyYAML",
    "huggingface_hub",
    "safetensors",
    "tensordict",
    "google-adk[a2a]",
    "google-generativeai",
    "langchain-google-genai",
    "langchain-mcp-adapters",
    "langgraph",
    "litellm",
    "a2a-sdk",
    "colbert-ai",
    "deeplake",
    "docling",
    "transformers",
    "peft",
    "graphiti-core",
    "falkordb",
    "crawl4ai",
    "accelerate",
    "mcp[cli]",
    "click",
    "fastapi",
    "uvicorn[standard]",
    "fastmcp",
    "pydantic-yaml",
    "jsonschema-pydantic",
    "textual",
    "textual-plotext",
    "httpx",
    "docker",
    "openhands-sdk",
    "openhands-tools",
    "nest-asyncio",
    "networkx",
    "asyncpg",
    "pycapnp",
    "pytorch-lightning",
    "vastai-sdk",
    "kernels",
    "evaluate",
    "unsloth",
    "trl",
    "unsloth-mlx",
    "opik"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
caramba = "caramba.__main__:main"

[tool.setuptools]
packages = [
    "caramba",
    "caramba.tui",
    "caramba.api",
    "caramba.ai",
    "caramba.benchmark",
    "caramba.cache",
    "caramba.ccl",
    "caramba.codegraph",
    "caramba.compiler",
    "caramba.config",
    "caramba.console",
    "caramba.data",
    "caramba.diffusion",
    "caramba.eval",
    "caramba.experiment",
    "caramba.infer",
    "caramba.instrumentation",
    "caramba.initializers",
    "caramba.initializers.dba",
    "caramba.layer",
    "caramba.loader",
    "caramba.adapter",
    "caramba.adapter.schema",
    "caramba.adapter.state_dict",
    "caramba.model",
    "caramba.carmath",
    "caramba.optimizer",
    "caramba.optimizer.metal",
    "caramba.orchestrator",
    "caramba.runtime",
    "caramba.topology",
    "caramba.trainer",
    "caramba.trainer.diffusion_codegen",
    "caramba.lab",
    "caramba.lab.resonant",
    "resonant",
    "resonant.core",
    "resonant.core.associative_memory",
    "collector",
    "collector.measurement",
    "collector.measurement.accuracy",
    "collector.measurement.context",
]

[tool.setuptools.package-dir]
caramba = "."

[tool.setuptools.package-data]
caramba = [
    "config/presets/*.yml",
    "config/benchmarks/*.yml",
    "research/**/manifests/*.yml",
    "optimizer/metal/*.metal",
    "optimizer/metal/*.mm",
]

[tool.pyright]
include = ["."]
exclude = [".venv", "**/__pycache__", "*.egg-info"]
# The project root (caramba/) is the import root. Top-level packages like
# `collector` and `caramba` are resolved relative to here.
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"

[tool.coverage.run]
# Torch / dynamo / compile can create ephemeral Python modules in temp dirs that
# disappear before reporting. Those should not fail coverage reporting.
omit = [
    "/private/var/folders/*",
    "/var/folders/*",
    "/tmp/*",
    "*/site-packages/*",
]

[tool.coverage.report]
ignore_errors = true
show_missing = true
skip_covered = false
